fixing distorted mobile pics

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ h1 {
     font-size: 4rem;
   }
   .pictures {
-    width: 90%;
+    width: 50%;
   }
   .message {
     margin: 0 auto;
